[package]
name = "light-bitcoin"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io> and koushiro <koushiro.cqx@gmail.com>"]
description = "A light bitcoin library inherited from parity-bitcoin, with `no_std` support."
edition = "2018"

[dependencies]
primitives = { path = "primitives" }
serialization = { path = "serialization" }
crypto = { path = "crypto" }
keys = { path = "keys" }
chain = { path = "chain" }
script = { path = "script" }
merkle = { path = "merkle" }

[workspace]
members = [
    "primitives",
    "serialization",
    "crypto",
    "keys",
    "chain",
    "script",
    "merkle",
]
