[package]
name = "light-bitcoin"
version = "0.2.0"
authors = ["ChainX <https://github.com/chainx-org>"]
description = "A light bitcoin library inherited from parity-bitcoin, with `no_std` support."
edition = "2018"
license = "GPL-3.0"

[features]
default = []
std = [
  "chain/std",
  "crypto/std",
  "keys/std",
  "merkle/std",
  "primitives/std",
  "script/std",
  "serialization/std",
]

[dependencies]
chain = { path = "chain", default-features = false }
crypto = { path = "crypto", default-features = false }
keys = { path = "keys", default-features = false }
merkle = { path = "merkle", default-features = false }
primitives = { path = "primitives", default-features = false }
script = { path = "script", default-features = false }
serialization = { path = "serialization", default-features = false, features = ["derive"] }

[workspace]
members = [
  "chain",
  "crypto",
  "keys",
  "merkle",
  "primitives",
  "script",
  "serialization",
  "serialization_derive",
]
