[package]
name = "light-bitcoin"
version = "0.2.0"
authors = ["ChainX <https://github.com/chainx-org>"]
description = "A light bitcoin library inherited from parity-bitcoin, with `no_std` support."
edition = "2018"
license = "GPL-3.0"

[features]
default = ["std"]
std = [
  "light-bitcoin-chain/std",
  "light-bitcoin-crypto/std",
  "light-bitcoin-keys/std",
  "light-bitcoin-merkle/std",
  "light-bitcoin-primitives/std",
  "light-bitcoin-script/std",
  "light-bitcoin-serialization/std",
]
derive = ["light-bitcoin-serialization/derive"]

[dependencies]
light-bitcoin-chain = { path = "chain", default-features = false }
light-bitcoin-crypto = { path = "crypto", default-features = false }
light-bitcoin-keys = { path = "keys", default-features = false }
light-bitcoin-merkle = { path = "merkle", default-features = false }
light-bitcoin-primitives = { path = "primitives", default-features = false }
light-bitcoin-script = { path = "script", default-features = false }
light-bitcoin-serialization = { path = "serialization", default-features = false }

[workspace]
members = [
  "chain",
  "crypto",
  "keys",
  "merkle",
  "primitives",
  "script",
  "serialization",
  "serialization-derive",
  "wasm-test",
]
