[package]
name = "base58"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com> and koushiro <koushiro.cqx@gmail.com>"]
license = "MIT"
homepage = "https://github.com/debris/base58"
repository = "https://github.com/debris/base58"
keywords = ["base58", "bitcoin", "address", "encoding"]
description = "Tiny and fast base58 encoding"
edition = "2018"

[dependencies]
ustd = { path = "../ustd", default-features = false }

[features]
default = ["std"]
std = [
    "ustd/std",
]
