[package]
name = "light-bitcoin-chain"
version = "0.2.0"
authors = ["ChainX <https://github.com/chainx-org>"]
edition = "2018"
license = "GPL-3.0"

[features]
default = ["std"]
std = [
  "rustc-hex/std",
  "codec/std",
  "serde",

  "light-bitcoin-crypto/std",
  "light-bitcoin-primitives/std",
  "light-bitcoin-serialization/std",
]

[dependencies]
rustc-hex = { version = "2.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }

light-bitcoin-crypto = { path = "../crypto", default-features = false }
light-bitcoin-primitives = { path = "../primitives", default-features = false }
light-bitcoin-serialization = { path = "../serialization", default-features = false, features = ["derive"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "merkle_root"
path = "benches/merkle_root.rs"
harness = false
