[package]
name = "crypto"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com> and koushiro <koushiro.cqx@gmail.com>"]
edition = "2018"

[dependencies]
primitives = { path = "../primitives", default-features = false }
ripemd160 = { version = "0.8", default-features = false }   # support `no_std`
sha-1 = { version = "0.8", default-features = false }       # support `no_std`
sha2 = { version = "0.8", default-features = false }        # support `no-std`
siphasher = "0.3"   # support `no_std` by default
digest = "0.8"      # support `no_std` by default

[dev-dependencies]
hex-literal = "0.2"

[features]
default = ["std"]
std = [
    "primitives/std",
    "digest/std",
    "ripemd160/std",
    "sha-1/std",
    "sha2/std",
]
