[package]
name = "crypto"
version = "0.2.0"
authors = ["ChainX <https://github.com/chainx-org>"]
edition = "2018"
license = "GPL-3.0"

[features]
default = ["std"]
std = [
  "digest/std",
  "ripemd160/std",
  "sha-1/std",
  "sha2/std",
  "siphasher/std",

  "primitives/std",
]

[dependencies]
digest = "0.8"
ripemd160 = { version = "0.8", default-features = false }
sha-1 = { version = "0.8", default-features = false }
sha2 = { version = "0.8", default-features = false }
siphasher = { version = "0.3", default-features = false }

primitives = { path = "../primitives", default-features = false }

[dev-dependencies]
hex-literal = "0.2"
