[package]
name = "light-bitcoin-keys"
version = "0.2.0"
authors = ["The ChainX Authors"]
edition = "2021"
license = "GPL-3.0"

[features]
default = ["std"]
std = [
  "bs58/std",
  "codec/std",
  "digest/std",
  "hex/std",
  "libsecp256k1/std",
  "serde/std",
  "scale-info/std",
  "sha2/std",

  "light-bitcoin-crypto/std",
  "light-bitcoin-primitives/std",
  "light-bitcoin-serialization/std",
]

[dependencies]
arrayref = { version = "0.3.6" }
bs58 = { version = "0.4", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "3.6.5",  default-features = false, features = ["derive"] }
digest = { version = "0.9.0", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
libsecp256k1 = { git = "https://github.com/chainx-org/libsecp256k1", branch = "develop-2022", default-features = false, features = ["hmac", "static-context"] }
serde = { version = "1.0", default-features = false, features = ["derive"]}
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
sha2 = { version = "0.9.5", default-features = false }
# for no-std
bitcoin-bech32 = { git = "https://github.com/chainx-org/rust-bech32-bitcoin", branch = "master", default-features = false }
light-bitcoin-crypto = { path = "../crypto", default-features = false }
light-bitcoin-primitives = { path = "../primitives", default-features = false }
light-bitcoin-serialization = { path = "../serialization", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
