[package]
name = "light-bitcoin-merkle"
version = "0.2.0"
authors = ["The ChainX Authors"]
edition = "2018"
license = "GPL-3.0"

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",

  "light-bitcoin-chain/std",
  "light-bitcoin-primitives/std",
  "light-bitcoin-serialization/std",
]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }


light-bitcoin-chain = { path = "../chain", default-features = false }
light-bitcoin-primitives = { path = "../primitives", default-features = false }
light-bitcoin-serialization = { path = "../serialization", default-features = false, features = ["derive"] }

[dev-dependencies]
hashbrown = "0.11"
hex = "0.4"
rand = "0.8"
light-bitcoin-crypto = { path = "../crypto" }
