[package]
name = "light-bitcoin-primitives"
version = "0.2.0"
authors = ["The ChainX Authors"]
edition = "2021"
license = "GPL-3.0"

[features]
default = ["std"]
std = [
  "byteorder/std",
  "codec/std",
  "fixed-hash/std",
  "hex/std",
  "serde",
  "scale-info/std",
  "impl-serde",
  "impl-codec/std",
  "primitive-types/std",
  "primitive-types/serde",
]

[dependencies]
byteorder = { version = "1.3", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
fixed-hash = { version = "0.7", default-features = false }
hex = { version = "0.4", default-features = false}
serde = { version = "1.0", features = ["derive"], optional = true }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

impl-serde = { version = "0.3.1", optional = true }
impl-codec = { version = "0.6.0", default-features = false }
primitive-types = { version = "0.11.1", default-features = false, features = ["codec", "scale-info"] }
