[package]
name = "light-bitcoin-schnorr"
version = "0.2.0"
authors = ["The ChainX Authors"]
edition = "2018"
license = "GPL-3.0"

[features]
default = ["std"]
std = [
    "libsecp256k1/std"
]

[dependencies]
libsecp256k1 = { version = "0.3.5", default-features = false, features = ["hmac"] }
digest = { version = "0.9.0", default-features = false }
sha2 = { version = "0.9.5", default-features = false }