[package]
name = "light-bitcoin-script"
version = "0.2.0"
authors = ["ChainX <https://github.com/chainx-org>"]
edition = "2018"
license = "GPL-3.0"

[features]
default = ["std"]
std = [
  "hex/std",

  "light-bitcoin-chain/std",
  "light-bitcoin-crypto/std",
  "light-bitcoin-keys/std",
  "light-bitcoin-primitives/std",
  "light-bitcoin-serialization/std",
]

[dependencies]
hex = { version = "0.4", default-features = false }

light-bitcoin-chain = { path = "../chain", default-features = false }
light-bitcoin-crypto = { path = "../crypto", default-features = false }
light-bitcoin-keys = { path = "../keys", default-features = false }
light-bitcoin-primitives = { path = "../primitives", default-features = false }
light-bitcoin-serialization = { path = "../serialization", default-features = false }
