[package]
name = "light-bitcoin-script"
version = "0.2.0"
authors = ["The ChainX Authors"]
edition = "2018"
license = "GPL-3.0"

[features]
default = ["std"]
std = [
  "hex/std",
  "sha2/std",
  "libsecp256k1/std",

  "light-bitcoin-chain/std",
  "light-bitcoin-crypto/std",
  "light-bitcoin-keys/std",
  "light-bitcoin-primitives/std",
  "light-bitcoin-serialization/std",
]

[dependencies]
hex = { version = "0.4", default-features = false }
sha2 = { version = "0.9.5", default-features = false }
libsecp256k1 = { version = "0.3.5", default-features = false, features = ["hmac"] }

light-bitcoin-chain = { path = "../chain", default-features = false }
light-bitcoin-crypto = { path = "../crypto", default-features = false }
light-bitcoin-keys = { path = "../keys", default-features = false }
light-bitcoin-primitives = { path = "../primitives", default-features = false }
light-bitcoin-serialization = { path = "../serialization", default-features = false }
