[package]
name = "light-bitcoin-serialization-derive"
version = "0.2.0"
authors = ["ChainX <https://github.com/chainx-org>"]
edition = "2018"
license = "GPL-3.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"

[dev-dependencies]
light-bitcoin-serialization = { path = "../serialization" }
