[package]
name = "light-bitcoin-serialization"
version = "0.2.0"
authors = ["The ChainX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
light-bitcoin-primitives = { path = "../primitives", default-features = false }
light-bitcoin-serialization-derive = { path = "../serialization-derive", optional = true }

[features]
default = ["std"]
std = ["codec/std","light-bitcoin-primitives/std"]
derive = ["light-bitcoin-serialization-derive"]
