[package]
name = "serialization_derive"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com> and koushiro <koushiro.cqx@gmail.com>"]
edition = "2018"

[lib]
name = "serialization_derive"
proc-macro = true

[dependencies]
syn = "0.11.11"
quote = "0.3.15"
primitives = { path = "../primitives" }

[dev-dependencies]
serialization = { path = "../serialization" }
