[package]
name = "serialization_derive"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com> and koushiro <koushiro.cqx@gmail.com>"]
edition = "2018"

[lib]
name = "serialization_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"

[dev-dependencies]
serialization = { path = "../serialization" }
