[package]
name = "serialization_derive"
version = "0.2.0"
authors = ["ChainX <https://github.com/chainx-org>"]
edition = "2018"
license = "GPL-3.0"

[lib]
name = "serialization_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"

[dev-dependencies]
serialization = { path = "../serialization" }
